# version_git_example

./: .gitignore  CMakeLists.txt  MSVS_cmake.cmd  build_linux.sh  main.c  main.cpp
CMake/: EmbedVersionInformation.cmake  EnsureGenerationSourceResource.cmake  EnsureGenerationSourceResourceCode.cmake  EnsureOutputPath.cmake  EnsureResourceCustomCommand.cmake  EnsureVersionBuildAll.cmake  EnsureVersionCustomCommand.cmake  EnsureVersionInformation.cmake  GeneratorResourceCode.cmake
dll/: CMakeLists.txt
dll/load/: CMakeLists.txt  lib.c  lib.cpp
dll/noload/: CMakeLists.txt  lib.c  lib.cpp  lib.h
resources/: TEXT_RESOURCE.TXT  TEXT_RESOURCE2.TXT  TEXT_RESOURCE3.TXT  TEXT_RESOURCE4.TXT
second/: CMakeLists.txt  lib.c  lib.cpp
